[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-trading-env-continuous"
version = "1.0.1"
license = {file = "LICENSE.txt"}
authors = [
  { name = "Remy Chaput", email = "rchaput.pro@gmail.com" },
  { name="Clement Perroud", email="clement.perroud.pro@gmail.com" },
]
description = "A simple, easy, customizable Gymnasium environment for trading."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pandas>=1.5.3", "numpy>=1.21.1", "gymnasium>=0.28.1", "flask>=2.2.3", "pyecharts>=2.0.2", "ccxt==3.0.59", "nest_asyncio"]

[project.urls]
"Homepage" = "https://github.com/rchaput/gym-trading-env-continuous"
"Bug Tracker" = "https://github.com/rchaput/gym-trading-env-continuous/issues"